--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,31 @@ body {
   margin: 0;
 }
 
+.root{
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  background-color: #373b69;
+  padding: 1rem;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.search {
+  font-family: inherit;
+  border: 2px solid #22254b;
+  border-radius: 50px;
+  background-color: transparent;
+  color: white;
+  font-size: 1.2rem;
+  padding: 0.5rem 1.5rem;
+}
+.searh:focus {
+  outline: none;
+}
+
 .movie {
   width: 250px;
   margin: 1rem;
@@ -22,10 +47,13 @@ body {
 }
 .movie img {
   max-width: 100%;
+  height: 400px;
+  object-fit: cover;
 }
 .movie-container {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .movie-info {
   display: flex;
@@ -54,4 +82,19 @@ body {
 }
 .movie:hover .movie-over {
   transform: translateY(0%);
+}
+.tag {
+  background-color: #22254b;
+  border-radius: 5px;
+  padding: 0.5rem;
+  font-weight: bold;
+}
+.tag.green {
+  color: green;
+}
+.tag.orange {
+  color: orange;
+}
+.tag.red {
+  color: red;
 }
