--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #22254b;
+  background-color: #222831;
   color: white;
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -17,7 +17,7 @@ body {
 }
 
 header {
-  background-color: #373b69;
+  background-color: #393E46;
   padding: 1rem;
   display: flex;
   justify-content: flex-end;
@@ -25,7 +25,7 @@ header {
 
 .search {
   font-family: inherit;
-  border: 2px solid #22254b;
+  border: 2px solid #222831;
   border-radius: 50px;
   background-color: transparent;
   color: white;
@@ -39,7 +39,7 @@ header {
 .movie {
   width: 250px;
   margin: 1rem;
-  background-color: #373b69;
+  background-color: #393E46;
   border-radius: 3px;
   box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
   overflow: hidden;
@@ -63,10 +63,11 @@ header {
 }
 .movie-info h3 {
   margin: 0;
+  font-size: 1rem;
 }
 .movie-over {
   background-color: #fff;
-  color: #22254b;
+  color: #222831;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   box-shadow: 0 -3px 5px rgba(0,0,0,0.1);
@@ -84,7 +85,7 @@ header {
   transform: translateY(0%);
 }
 .tag {
-  background-color: #22254b;
+  background-color: #222831;
   border-radius: 5px;
   padding: 0.5rem;
   font-weight: bold;
