--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ header {
   background-color: #393E46;
   padding: 1rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .search {
