--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ header {
   background-color: transparent;
   color: white;
   font-size: 1.2rem;
-  padding: 0.5rem 1.5rem;
+  padding: 6px 12px;
 }
 .searh:focus {
   outline: none;
