--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@ body {
 
 header {
   background-color: #393E46;
-  padding: 1rem;
+  padding: 1rem 0;
   display: flex;
   justify-content: center;
 }
