override font boosting

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
 @import url(https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap);
-
+html * {
+  max-height:1000000px;
+}
 * {
   box-sizing: border-box;
 }
