--- a/src/index.css
+++ b/src/index.css
@@ -16,23 +16,26 @@ body {
 .root{
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-header {
+/* header {
   background-color: #393E46;
   padding: 1rem 0;
   display: flex;
   justify-content: center;
-}
+} */
 
 .search {
   font-family: inherit;
-  border: 2px solid #222831;
+  border: 2px solid #393E46;
   border-radius: 50px;
   background-color: transparent;
   color: white;
   font-size: 1.2rem;
   padding: 6px 12px;
+  margin: 12px 0px;
 }
 .searh:focus {
   outline: none;
