added refresh function

--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@ body {
   display: flex;
   justify-content: center;
 } */
+form {
+  box-sizing: border-box;
+}
 
 .search {
   font-family: inherit;
@@ -33,9 +36,11 @@ body {
   border-radius: 50px;
   background-color: transparent;
   color: white;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding: 6px 12px;
   margin: 12px 0px;
+  width: 100%;
+  min-width: 50%;
 }
 .searh:focus {
   outline: none;
